redirect home page to index page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 Name:Tommy Lee Truong
-Last Edit:Jan 26 2022
+Last Edit:Jan 27 2022
 Program Name: My Curriculum Vitae Site
 
 homepage/contact informaion
@@ -18,7 +18,7 @@ homepage/contact informaion
 
 	<body>
 		<nav id= "menubar">
-			<a href="home.html" class="menu_item active"><div class="pad3">Home</div></a>
+			<a href="index.html" class="menu_item active"><div class="pad3">Home</div></a>
 			<a href="resume.html" class="menu_item"><div class="pad">Resume</div></a>
 			<a href="portfolio.html" class="menu_item"><div class="pad">Portfolio</div></a>
 		</nav>
