--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <!--
 Name:Tommy Lee Truong
-Last Edit:Jan 26 2022
+Last Edit:Jan 27 2022
 Program Name: My Curriculum Vitae Site
 
 portfolio
@@ -16,7 +16,7 @@ portfolio
 	</head>
 	<body>
 		<nav id= "menubar">
-			<a href="home.html" class="menu_item"><div class="pad">Home</div></a>
+			<a href="index.html" class="menu_item"><div class="pad">Home</div></a>
 			<a href="resume.html" class="menu_item "><div class="pad">Resume</div></a>
 			<a href="portfolio.html" class="menu_item active" ><div class="pad3">Portfolio</div></a>
 		</nav>
